wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: lkp
  labels:
    app: lkp
spec:
  ports:
  - port: 80
    targetPort: 80
    name: lkp-svc
  selector:
    app: lkp
    tier: frontend
  type: LoadBalancer
  # only specify on RPI setup
#loadBalancerIP: redacted

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lkp
  labels:
    app: lkp
    role: wp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lkp
      tier: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: lkp
        tier: frontend
    spec:
      containers:
      - image: wordpress:6.2.1-php8.1-apache
        name: lkp
        ports:
        - containerPort: 80
          name: lkp-svc
        resources:
          limits:
            cpu: 500m
            memory: "800Mi"
          requests:
            memory: "200Mi"
            cpu: "150m"
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        volumeMounts:
        - name: lkp-persistent-storage
          mountPath: /var/www/html
        - name: lkp-custom
          mountPath: /usr/local/etc/php/conf.d/uploads.ini
          subPath: uploads.ini
        - name: lkp-custom
          mountPath: /var/www/html/.htaccess
          subPath: .htaccess
      volumes:
      - name: lkp-persistent-storage
        persistentVolumeClaim:
          claimName: lkp-nfs
      - name: lkp-custom
        configMap:
          name: lkp-custom-options
          items:
          - key: ".htaccess"
            path: ".htaccess"
          - key: "uploads.ini"
            path: "uploads.ini"
